@@ -61,6 +61,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ThreadFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|ThreadPoolExecutor
 import|;
 end_import
@@ -426,6 +438,18 @@ operator|>
 literal|0
 argument_list|)
 expr_stmt|;
+specifier|final
+name|String
+name|n
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
 name|this
 operator|.
 name|largeCompactions
@@ -449,6 +473,49 @@ argument_list|<
 name|Runnable
 argument_list|>
 argument_list|()
+argument_list|,
+operator|new
+name|ThreadFactory
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Thread
+name|newThread
+parameter_list|(
+name|Runnable
+name|r
+parameter_list|)
+block|{
+name|Thread
+name|t
+init|=
+operator|new
+name|Thread
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|t
+operator|.
+name|setName
+argument_list|(
+name|n
+operator|+
+literal|"-largeCompactions-"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
 argument_list|)
 expr_stmt|;
 name|this
@@ -503,6 +570,49 @@ argument_list|<
 name|Runnable
 argument_list|>
 argument_list|()
+argument_list|,
+operator|new
+name|ThreadFactory
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Thread
+name|newThread
+parameter_list|(
+name|Runnable
+name|r
+parameter_list|)
+block|{
+name|Thread
+name|t
+init|=
+operator|new
+name|Thread
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|t
+operator|.
+name|setName
+argument_list|(
+name|n
+operator|+
+literal|"-smallCompactions-"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
 argument_list|)
 expr_stmt|;
 name|this
@@ -531,6 +641,49 @@ operator|.
 name|newFixedThreadPool
 argument_list|(
 name|splitThreads
+argument_list|,
+operator|new
+name|ThreadFactory
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Thread
+name|newThread
+parameter_list|(
+name|Runnable
+name|r
+parameter_list|)
+block|{
+name|Thread
+name|t
+init|=
+operator|new
+name|Thread
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|t
+operator|.
+name|setName
+argument_list|(
+name|n
+operator|+
+literal|"-splits-"
+operator|+
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|t
+return|;
+block|}
+block|}
 argument_list|)
 expr_stmt|;
 block|}
